--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -41,6 +41,19 @@
       <param-name>com.sun.faces.expressionFactory</param-name>
       <param-value>org.jboss.el.ExpressionFactoryImpl</param-value>   
    </context-param> 
+   <!-- ***** Filter Definitions ***** -->
+   <filter>
+      <display-name>AppEngine Bug 8145 Work Around</display-name>
+      <description>
+      Suppresses the If Modified Since header until GAE bug 8145 is fixed.
+      </description>
+      <filter-name>GAEBug8145WorkAround</filter-name>
+      <filter-class>com.wildstartech.gae.jsf21template.HttpIfModifiedSinceFix</filter-class>
+   </filter>
+   <filter-mapping>
+      <filter-name>GAEBug8145WorkAround</filter-name>
+      <url-pattern>/*</url-pattern>
+   </filter-mapping>
    <!-- ***** Load the JavaServer Faces Servlet ***** -->
    <servlet>
       <servlet-name>Faces Servlet</servlet-name>
